--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.6",
     "angular-calendar": "^0.25.2",
     "angular-font-awesome": "^3.1.2",
     "angular2-datetimepicker": "^1.1.1",
